set maximum method length to 10 lines in Rubocop configuration

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,9 @@ AllCops:
 Style/Documentation:
   Enabled: false
 
+Metrics/MethodLength:
+  Max: 10
+
 Metrics/BlockLength:
   AllowedMethods: ['describe', 'context', 'it']
 
